fix overflowing width for recent docs again

--- a/resources/assets/css/components/menu.less
+++ b/resources/assets/css/components/menu.less
@@ -289,6 +289,7 @@
   }
   img {
     .size_of(chat; height; vh);
+    width: 100%;
     max-height: 80vh;
     opacity: .5;
   }
