--- a/resources/assets/css/components/outer.less
+++ b/resources/assets/css/components/outer.less
@@ -62,7 +62,6 @@
 }
 .content {
   .box-sizing(content-box);
-  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: @padding_outer;
